--- a/src/styles/carrousel.css
+++ b/src/styles/carrousel.css
@@ -1,16 +1,27 @@
 .custom-carousel {
-    width: 100%;/* Ocupa el 100% del ancho del contenedor padre */
-    max-height: 50vh;/* Establece la altura al 60% del alto del viewport */
-    overflow: hidden;/* Para recortar las imágenes si son más altas que el 60% del viewport */
+    width: 100%;
+    /* Ocupa el 100% del ancho del contenedor padre */
+    max-height: 50vh;
+    /* Establece la altura al 60% del alto del viewport */
+    overflow: hidden;
+    /* Para recortar las imágenes si son más altas que el 60% del viewport */
 }
 
 .custom-carousel-image {
     width: 100%;
     height: 50vh;
-    object-fit: cover; /* Escala la imagen para que cubra todo el espacio sin distorsión */
+    object-fit: cover;
+    /* Escala la imagen para que cubra todo el espacio sin distorsión */
 }
 
-.sombra{
-    box-shadow: 0px 0px 200px 14px rgba(0,0,0,0.7) inset;
+.sombra {
+    box-shadow: 0px 0px 200px 14px rgba(0, 0, 0, 0.7) inset;
     border-radius: 8px;
+}
+
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.15) !important;
 }
